--- a/styles/style.css
+++ b/styles/style.css
@@ -33,13 +33,15 @@
   line-height: 92px;
   font-weight: bold;
   width: 730px;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   z-index: 2;
 }
 
 .header__subtitle {
+  margin: 0;
   font-size: 18px;
   line-height: 25px;
+  font-weight: normal;
   width: 388px;
   position: absolute;
   left: 64px;
@@ -49,6 +51,7 @@
 
 .header__link {
   text-decoration: none;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
@@ -134,12 +137,16 @@
 .section-subtitle {
   font-size: 24px;
   line-height: 34px;
+  font-weight: normal;
   width: 60%;
   text-align: center;
   margin: 20px 0 0;
 }
 
 .table {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
   display: flex;
   width: 1100px;
   flex-wrap: wrap;
@@ -170,7 +177,7 @@
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -193,12 +200,15 @@
 .feynman__subtitle {
   font-size: 36px;
   line-height: 51px;
+  font-weight: normal;
   margin: 0;
 }
 
 .feynman_link {
   font-size: 36px;
   line-height: 51px;
+  font-weight: normal;
+  color: #2f80ed;
   position: absolute;
   top: 50%;
   right: 48px;
