--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(../../images/feynman/feynman.png);
+  background-image: url(../../images/feynman.png);
   background-repeat: no-repeat;
   background-position: left bottom;
   background-color: #f2f2f2;
