--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,7 +1,7 @@
 .khan__book-pic {
-  background-image: url(../../../images/khan-book.jpg);
   width: 620px;
   height: 608px;
   margin-right: 48px;
-  background-size: cover;
+  object-fit: cover;
+  object-position: top left;
 }
